--- a/flutter_web/pubspec.yaml
+++ b/flutter_web/pubspec.yaml
@@ -21,6 +21,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo/transparent-logo.svg
+    - assets/softwarica.png
   fonts:
     - family: Poppins
       fonts:
